[project]
name = "rms-shopify-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "leoillanez777",email = "enzo@oneclick.cr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "psutil (>=7.0.0,<8.0.0)",
    # Dependencias para SQL Server
    "sqlalchemy[asyncio] (>=2.0.0,<3.0.0)",
    "aioodbc (>=0.5.0,<0.6.0)",
    "pyodbc (>=5.1.0,<6.0.0)",
    # Cliente HTTP para Shopify
    "httpx (>=0.27.0,<1.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    # Redis para cache y tareas asíncronas
    "redis (>=5.0.0,<6.0.0)",
    # Tareas programadas
    "apscheduler (>=3.10.0,<4.0.0)",
    # Fecha y tiempo
    "python-dateutil (>=2.8.0,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "vulture (>=2.14,<3.0)",
    "py-spy (>=0.4.0,<0.5.0)",
]

[tool.poetry]
packages = [{include = "app"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.0"
pyright = "^1.1.402"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 120
target-version = "py313"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = false
reportOptionalMemberAccess = false
reportCallIssue = false
reportArgumentType = false
reportGeneralTypeIssues = "warning"  # Cambiar a warning en lugar de error
# Ignorar solo en archivos específicos
include = ["app/**"]
exclude = ["**/__pycache__", "**/alembic/**"]
